# azuree0-portfolio.pages.dev

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  add-pages-custom-domain.ps1  azuree0-profile-README.md  deploy.ps1  index.html  nginx.conf.template  render.yaml  setup-github-secrets.ps1  start.sh
.github/workflows/: deploy-cloudflare-pages.yml  deploy.yml
src/: app.rs  lib.rs  scene.rs
src/api/: github.rs
src/components/: hero.rs  marine_snow.rs  mod.rs  repo_card.rs  repo_grid.rs
src/models/: mod.rs  repo.rs
static/: caustics.js
static/js/: mesh.js  mesh.wasm
styles/: main.css
