[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement", "HtmlElement", "HtmlBodyElement",
    "DomRect", "CanvasRenderingContext2d",
    "WebGl2RenderingContext", "WebGlProgram", "WebGlShader", "WebGlBuffer",
    "WebGlVertexArrayObject", "OesVertexArrayObject",
    "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "console", "Performance", "PerformanceTiming",
    "VisibilityState", "EventTarget", "Event",
    "Clipboard", "Navigator",
] }
js-sys = "0.3"
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-events = "0.2"
gloo-storage = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
